# CrawlerC

./: Semaphore.cpp  crawler_url_da_listagem_por_categoria_paralelo.cpp
CrawlerC2/: CMakeCache.txt  CMakeLists.txt  CrawlerParalelo  CrawlerSequencial  crawler_seq2  crawler_seq2.cpp  crawler_seq3  crawler_seq3.cpp  curl_example  curl_example.cpp  curl_example2  curl_example_parallel.cpp  curl_example_parallel2  getex.cpp  infos_prod.txt  infos_prod_parallel.txt  mycurlfile.txt  mycurlfile_parallel.txt
CrawlerC2/crawler_seq2.dSYM/Contents/: Info.plist
CrawlerC2/crawler_seq2.dSYM/Contents/Resources/DWARF/: crawler_seq2
CrawlerC2/curl_example.dSYM/Contents/: Info.plist
CrawlerC2/curl_example.dSYM/Contents/Resources/DWARF/: curl_example
P2igor/: CMakeLists.txt  CrawlerParalelo  Makefile  cmake_install.cmake  crawler_seq3  crawler_seq3.cpp  curl_example  curl_example.cpp  curl_example2  curl_example2.cpp  curl_example_parallel  curl_example_parallel.cpp  getex  infos_prod.txt  infos_prod_parallel.txt  mycurlfile.txt  mycurlfile_parallel.txt  page.txt
P2igor/crawler_seq3.dSYM/Contents/: Info.plist
P2igor/crawler_seq3.dSYM/Contents/Resources/DWARF/: crawler_seq3
P2igor/curl_example_parallel.dSYM/Contents/: Info.plist
P2igor/curl_example_parallel.dSYM/Contents/Resources/DWARF/: curl_example_parallel
